[package]
name = "pause-all"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.pausable]
path = "../common/modules/pausable"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies.farm]
path = "../dex/farm"

[dev-dependencies.pair]
path = "../dex/pair"
