[package]
name = "common_structs"
version = "0.0.0"
authors = [ "catalin-neagu <catalin.neagu@dharitri.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.mergeable]
path = "../traits/mergeable"

[dependencies.fixed-supply-token]
path = "../traits/fixed-supply-token"

[dependencies.unwrappable]
path = "../traits/unwrappable"

[dependencies.math]
path = "../modules/math"
