[package]
name = "pair"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"

[dependencies.fees-collector]
path = "../../energy-integration/fees-collector"

[dependencies.itertools]
version = "0.10.1"
default-features = false

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"
