[package]
name = "router"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.dharitri-sc]
version = "=0.13.6"
features = ["dct-token-payment-legacy-decode"]

[dependencies.pair]
path = "../pair"

[dependencies.locking_module]
path = "../../common/modules/locking_module"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.6"
