[package]
name = "router"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/contract.rs"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dependencies.pair]
path = "../pair"

[dependencies.locking_module]
path = "../../common/modules/locking_module"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"
