[package]
name = "fees-collector"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dependencies.energy-query]
path = "../common-modules/energy-query"

[dependencies.week-timekeeping]
path = "../common-modules/week-timekeeping"

[dependencies.weekly-rewards-splitting]
path = "../common-modules/weekly-rewards-splitting"

[dependencies.energy-factory]
path = "../../locked-asset/energy-factory"

[dependencies.simple-lock]
path = "../../locked-asset/simple-lock"

[dependencies.locking_module]
path = "../../common/modules/locking_module"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.common-types]
path = "../common-types"

[dependencies.common_errors]
path = "../../common/common_errors"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"
