[package]
name = "farm-staking-proxy"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dependencies]
hex-literal = "0.3.1"

[dependencies.farm]
path = "../../dex/farm"

[dependencies.farm-staking]
path = "../farm-staking"

[dependencies.pair]
path = "../../dex/pair"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.token_merge_helper]
path = "../../common/modules/token_merge_helper"

[dependencies.common_structs]
path = "../../common/common_structs"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.config]
path = "../../common/modules/farm/config"

[dependencies.rewards]
path = "../../common/modules/farm/rewards"

[dev-dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dev-dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"

[dev-dependencies.farm-boosted-yields]
path = "../../energy-integration/farm-boosted-yields"
