[package]
name = "farm-staking"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.farm]
path = "../../dex/farm"

[dependencies.config]
path = "../../common/modules/farm/config"

[dependencies.farm_base_impl]
path = "../../common/modules/farm/farm_base_impl"

[dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dependencies.rewards]
path = "../../common/modules/farm/rewards"

[dependencies.events]
path = "../../common/modules/farm/events"

[dependencies.contexts]
path = "../../common/modules/farm/contexts"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"

[dependencies.math]
path = "../../common/modules/math"

[dependencies.energy-factory]
path = "../../locked-asset/energy-factory"

[dependencies.mergeable]
path = "../../common/traits/mergeable"

[dependencies.fixed-supply-token]
path = "../../common/traits/fixed-supply-token"

[dependencies.pair]
path = "../../dex/pair"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"
