[package]
name = "metabonding-staking"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dependencies.factory]
path = "../../locked-asset/factory"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.common_structs]
path = "../../common/common_structs"
