[package]
edition = "2021"
name = "distribution"
publish = false
version = "0.0.0"

[lib]
path = "src/lib.rs"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.factory]
path = "../factory"

[dependencies.dharitri-sc]
version = "=0.13.6"
features = ["dct-token-payment-legacy-decode"]

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.6"
