[package]
name = "factory"
publish = false
version = "0.0.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.token_merge_helper]
path = "../../common/modules/token_merge_helper"

[dependencies.energy-factory]
path = "../energy-factory"

[dev-dependencies.simple-lock]
path = "../simple-lock"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }
itertools = { version = "0.10.1", default-features = false }

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
