[package]
name = "lkmex-transfer"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.legacy_token_decode_module]
path = "../../common/modules/legacy_token_decode_module"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.energy-factory]
path = "../energy-factory"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.dharitri-sc]
version = "=0.13.4"
features = ["dct-token-payment-legacy-decode"]

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.13.4"

[dev-dependencies.dharitri-sc-modules]
version = "=0.13.4"
