[package]
name = "lkmex-transfer"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.energy-factory]
path = "../energy-factory"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"
