[package]
name = "simple-lock-whitelist"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
