[package]
name = "token-unstake"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dev-dependencies.dharitri-wasm-debug]
version = "=0.10.6"

[dev-dependencies.dharitri-wasm-modules]
version = "=0.10.6"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.mergeable]
path = "../../common/traits/mergeable"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.week-timekeeping]
path = "../../energy-integration/common-modules/week-timekeeping"

[dependencies.energy-factory]
path = "../energy-factory"

[dependencies.simple-lock]
path = "../simple-lock"
