[package]
name = "pause-all-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.pause-all]
path = ".."

[dependencies.dharitri-wasm-node]
version = "=0.10.6"

[dependencies.dharitri-wasm-output]
version = "=0.10.6"
features = [ "wasm-output-mode",]
