[package]
name = "legacy_token_decode_module"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@dharitri.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "=0.13.4"
features = ["dct-token-payment-legacy-decode"]

[dependencies.common_structs]
path = "../../common_structs"

[dependencies.utils]
path = "../utils"
