[package]
name = "locking_module"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "=0.13.6"
features = ["dct-token-payment-legacy-decode"]

[dependencies.simple-lock]
path = "../../../locked-asset/simple-lock"

[dependencies.energy-factory]
path = "../../../locked-asset/energy-factory"
