[package]
name = "locking_module"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>" ]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]

[dependencies.simple-lock]
path = "../../../locked-asset/simple-lock"

[dependencies.energy-factory]
path = "../../../locked-asset/energy-factory"
