[package]
name = "pausable"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>" ]
edition = "2018"

[lib]
path = "src/pausable.rs"

[dependencies.permissions_module]
path = "../permissions_module"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]
