[package]
name = "permissions_module"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>", "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>" ]
edition = "2018"

[lib]
path = "src/permissions_module.rs"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies]
bitflags = "1.3.2"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]
