[package]
name = "token_merge_helper"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-sc]
version = "=0.13.4"
features = ["dct-token-payment-legacy-decode"]
