[package]
name = "token_merge_helper"
version = "0.0.0"
authors = [ "catalin-neagu <catalin.neagu@dharitri.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-wasm]
version = "=0.10.6"
features = ["dct-token-payment-legacy-decode",]
